bynkc/tests/fixtures/negative/496_locale_multiple_message_bundles/src/msgs_a.bynk
commons msgs_a

uses bynk.locale

messages "en" @reference {
  "greeting" => "Hello"
}
